# navyd.github.io

./: .actrc  .gitignore  .gitmodules  .markdownlint.jsonc  .pre-commit-config.yaml  .typos.toml  404.html  README.md  _up_refresh.js  config.toml  config.toml.paper  hugo.toml  index.html  index.json  index.md  index.xml  lefthook.yaml  mise.ci.toml  mise.dev.toml  mise.toml  mlc_config.json  pyproject.toml  robots.txt  sitemap.xml  五笔.xmind
.githooks/: pre-commit
.github/workflows/: ci.yaml  gh-pages.yml  md-link-checker.yml
archetypes/: default.md
archetypes/posts/: index.md
assets/files/: wsl2-port-forwarding.ps1
assets/images/: 0dc0cc3d-5057-47e8-9620-25b90ce05686.png:Zone.Identifier
categories/: index.html  index.xml
config/_default/: hugo.toml
content/: search.md  search.zh-cn.md  search.zh.md
content/posts/: _content.gotmpl  _index.md
content/res/: dictionary-simple.md
docker/: installation.md  rpi4: docker No xxx support.md
en/: sitemap.xml
git/: git_usages.md
hugo/: blog.md
hugodynctx/hugodynctx/: __init__.py  _content.gotmpl.jinja
hugodynctx/tests/: test_hugodynctx.py
idea/: Could not autowire. No beans of 'ProductCategoryMapper' type found.md  idea常用插件.md  idea激活.md
idea/配置/: 默认打开上次项目设置.md
java/: idea_problems.md  并发.xmind  并发艺术.xmind
java/JVM/: Class File.xmind  GC.xmind  WSL2 Ubuntu-20.04编译OpenJDK 12.md  java内存区域.xmind  类文件结构.xmind
layouts/_default/: list.html
layouts/partials/: GetAllPaths.gotmpl
linux/: clash透明代理.md  how to configure smb on ubuntu.md  letsencrypt证书申请.md  pi4.md  rpi4.md  samba服务.md  vim配置.md  win10 samba共享密码无法登陆.md  win10 samba挂载无法执行exe文件.md  zsh configuration.md  后台运行任务.md  在Shell后台运行任务.md  挂载与samba服务.md  透明代理.md  部署TTRSS.md  部署aria2下载服务.md
linux/wsl2/: WSL2设置内网访问.md  installation.md  wsl2 xfce快捷键冲突.md  wsl2_problems.md  wsl2安装xfce黑屏.md  不能访问wsl2 mysql, redis.md
maven/: maven_usage.md
mybatis/: #{}和${}的区别.md  Mybatis 与lombok `@Builder` `@SuperBuilder`冲突.md
mysql/: 24_26. 主备一致.xmind  3.8.事务.xmind  4.索引.xmind  6.7.锁.xmind  9.如何选择唯一和普通索引.xmind  MVCC.md  master.cnf  mysql隔离级别.md  不同隔离级别的事务间有何影响.md  事务隔离Isolation.md  记录不存在行锁无法生效问题.md
page/1/: index.html
page/2/: index.html
page/3/: index.html
page/4/: index.html
page/5/: index.html
page/6/: index.html
page/7/: index.html
page/8/: index.html
page/9/: index.html
post/: index.html  index.xml
posts/: index.html  index.xml
res/: index.html  index.xml
res/dictionary-simple/: index.html
res/mysql/: 23. 数据可靠性.xmind  6.7.锁.xmind  Replication.xmind
res/rust/: Asynchronous.xmind
rust/: Cargo.xmind  Patterns&Matching.xmind  generic lifetime.xmind  how to write a list.xmind  installation.md  pin无法为何直接固定在stack上.md  project managing.xmind  rust analyzer中自动插入triple-slash.md  rust-analyzer ctrl+.在win10无效.md  rust.xmind
search/: index.html  index.json
search.zh/: index.html
search.zh-cn/: index.html
spring/: Spring Bean实例化.md  spring.xmind
spring/spring-cloud/: 服务容错-Sentinel.xmind  消息.xmind
static/: CNAME
tags/: index.html  index.xml
tags/actions/: index.html  index.xml
tags/android/: index.html  index.xml
tags/auto-configuration/: index.html  index.xml
tags/axum/: index.html  index.xml
tags/bash/: index.html  index.xml
tags/blog/: index.html  index.xml
tags/cargo/: index.html  index.xml
tags/cd/: index.html  index.xml
tags/chat/: index.html  index.xml
tags/chinese/: index.html  index.xml
tags/ci/: index.html  index.xml
tags/clash/: index.html  index.xml
tags/classloader/: index.html  index.xml
tags/cli/: index.html  index.xml
tags/code/: index.html  index.xml
tags/copywriting/: index.html  index.xml
tags/cron/: index.html  index.xml
tags/daemon/: index.html  index.xml
tags/deepseek/: index.html  index.xml
tags/deploy/: index.html  index.xml
tags/dev/: index.html  index.xml
tags/devops/: index.html  index.xml
tags/doc/: index.html  index.xml
tags/docker/: index.html  index.xml
tags/editor/: index.html  index.xml
tags/encoding/: index.html  index.xml
tags/exception/: index.html  index.xml
tags/git/: index.html  index.xml
tags/git-hook/: index.html  index.xml
tags/git-merge/: index.html  index.xml
tags/git-submodule/: index.html  index.xml
tags/git-subtree/: index.html  index.xml
tags/github/: index.html  index.xml
tags/go-template/: index.html  index.xml
tags/gpu/: index.html  index.xml
tags/http/: index.html  index.xml
tags/hugo/: index.html  index.xml
tags/hyper-v/: index.html  index.xml
tags/ime/: index.html  index.xml
tags/intel/: index.html  index.xml
tags/iptables/: index.html  index.xml
tags/jar/: index.html  index.xml
tags/java/: index.html  index.xml
tags/jvm/: index.html  index.xml
tags/lint/: index.html  index.xml
tags/linter/: index.html  index.xml
tags/linux/: index.html  index.xml
tags/llm/: index.html  index.xml
tags/lru/: index.html  index.xml
tags/markdown/: index.html  index.xml
tags/maven/: index.html  index.xml
tags/miui/: index.html  index.xml
tags/mount/: index.html  index.xml
tags/neovim/: index.html  index.xml
tags/obsidian/: index.html  index.xml
tags/optimize/: index.html  index.xml
tags/package/: index.html  index.xml
tags/pip/: index.html  index.xml
tags/pipe/: index.html  index.xml
tags/port-forwarding/: index.html  index.xml
tags/powerline/: index.html  index.xml
tags/powershell/: index.html  index.xml
tags/process/: index.html  index.xml
tags/proxy/: index.html  index.xml
tags/python/: index.html  index.xml
tags/rust/: index.html  index.xml
tags/script/: index.html  index.xml
tags/shell/: index.html  index.xml
tags/spellcheck/: index.html  index.xml
tags/spring/: index.html  index.xml
tags/spring-boot/: index.html  index.xml
tags/ssl/: index.html  index.xml
tags/statistics/: index.html  index.xml
tags/submodule/: index.html  index.xml
tags/sudo/: index.html  index.xml
tags/tar/: index.html  (+1 more)
ts/: main.2760efe2b07bc1f771820787a816b980000936e884b19441806bce1518d37d8c.js
wordpress/: wordpress.md
zh-cn/: 404.html  index.html  index.xml  sitemap.xml
(+627 files in other folders)
